--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   },
   "devDependencies": {
     "body-parser": "^1.15.1",
+    "coveralls": "^2.11.9",
     "eslint": "^2.12.0",
     "express": "^4.13.4",
     "istanbul": "^0.4.3",
