--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "express": "^4.13.4",
     "istanbul": "^0.4.3",
     "mocha": "^2.5.3",
+    "pre-commit": "^1.1.3",
     "supertest": "^1.2.0"
   }
 }
