--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "name": "jsonscript-proxy",
-  "version": "0.1.1",
+  "version": "0.2.0",
   "description": "Proxy server for scripted processing of other services using JSONScript",
   "main": "index.js",
+  "bin": {
+    "jsproxy": "bin/jsproxy.js"
+  },
   "scripts": {
     "test": "npm run eslint && npm run test-cov",
     "test-spec": "mocha spec/*.spec.js -R spec",
@@ -27,15 +30,16 @@
   "dependencies": {
     "ajv": "^4.1.2",
     "ajv-keywords": "^0.2.0",
+    "body-parser": "^1.15.1",
+    "express": "^4.13.4",
     "jsonscript-js": "^0.4.2",
     "lodash": "^4.13.1",
+    "minimist": "^1.2.0",
     "request": "^2.72.0"
   },
   "devDependencies": {
-    "body-parser": "^1.15.1",
     "coveralls": "^2.11.9",
     "eslint": "^2.12.0",
-    "express": "^4.13.4",
     "istanbul": "^0.4.3",
     "mocha": "^2.5.3",
     "pre-commit": "^1.1.3",
